# ckanext-lollipop

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/lollipop/: action.py  auth.py  config_declaration.yaml  helpers.py  interface.py  logic.py  plugin.py  schema.py  util.py  views.py
ckanext/lollipop/assets/: script.js  webassets.yml
ckanext/lollipop/templates/: base.html
ckanext/lollipop/templates/ckanext_lollipop/: captcha.html  lollipop_breadcrumb.html  lollipop_captcha_failed.html  lollipop_form.html  lollipop_home_content.html  lollipop_requirement.html
ckanext/lollipop/templates/home/: index.html
ckanext/lollipop/templates/snippets/: captcha_failed.html  recaptcha.html
ckanext/lollipop/tests/: test_auth.py  test_helpers.py  test_interface.py  test_logic.py  test_plugin.py  test_util.py  test_views.py
