[metadata]
name = ckanext-lollipop
version = 0.0.1
description = Require non-logged in users of CKAN to complete a captcha to access expensive pages to render
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioplatformsAustralia/ckanext-lollipop
author = Bioplatforms Australia
author_email = help@bioplatforms.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN Captcha

[options]
packages = find:
namespace_packages = ckanext
install_requires =
                 ckanext-toolbelt
include_package_data = True

[options.entry_points]
ckan.plugins =
             lollipop = ckanext.lollipop.plugin:LollipopPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/lollipop/i18n/ckanext-lollipop.pot
width = 80

[init_catalog]
domain = ckanext-lollipop
input_file = ckanext/lollipop/i18n/ckanext-lollipop.pot
output_dir = ckanext/lollipop/i18n

[update_catalog]
domain = ckanext-lollipop
input_file = ckanext/lollipop/i18n/ckanext-lollipop.pot
output_dir = ckanext/lollipop/i18n
previous = true

[compile_catalog]
domain = ckanext-lollipop
directory = ckanext/lollipop/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
